update the DBconnection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
         "."
     ],
     "java.project.referencedLibraries": [
-        "d:\\java\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar"
+        "mysql-connector-j-9.6.0\\mysql-connector-j-9.6.0.jar"
     ]
 }
